# code_

./: .gitignore  Readme.md  main.cpp
R/: basics.r
apl/asm/: hello-world.asm
bazel/: bazel-bazel  bazel-bin  bazel-out  bazel-testlogs
c++/: log.txt  rough.cpp
c++/rush/: array.cpp  (+3 more)
cppLang/: Readme.md
cppLang/code/src/: CMakeLists.txt  main.cpp
cppLang/code/src/components/ben/: INVOKING.cpp  c_in_c++.cpp  class.cpp  dog_select.cpp  fav_num.cpp  hello_world.cpp  room.cpp
cppLang/code/src/components/classes/: student.h
cppLang/code/src/components/cognition/: INVOKING.cpp  array.cpp  basics.cpp
cppLang/code/src/includes/: ben.h  cognition.h
dl_pytorch/: basics.ipynb
llvmx/: test-x.s  test.bc  test.ll  test.s  testx
lua/: co-routines.lua  function.lua  hello_world.lua  if_statement.lua  loops.lua  maths.lua  metamethods.lua  module.lua  module_test.lua  oop.lua  strings.lua  tables.lua  user_input.lua
ml_c++/: .gitignore  BUILD  hello.ipynb
programming/: A_Channel.cpp  A_Doremy_s_Paint_3.cpp  A_Gift_Carpet.cpp  A_How_Much_Does_Daytona_Cost.cpp  A_Increasing_Sequence.cpp  A_Increasing_and_Decreasing.cpp  A_Rigged.cpp  A_Short_Sort.cpp  A_United_We_Stand.cc  B_Aleksa_and_Stack.cc  B_Chips_On_The_Board.cc  B_Christmas_Spruce.cpp  B_Good_Kit.cc  B_Sets_and_Union.cc  B_Split_Sort.cpp  B_XOR_Palindromes.cpp  C_Sum_in_Binary_Tree.cpp  C_Target_Practic.cc  D_Strong_Vertices.cpp  cf_891_array_coloring.cc  stephen-salary.cc  string_generation.cc
prolog/: database.pl
python/: 3d_max.cc  add_smal_scores.cc  component.cpp  main.py  smallest_century.cc
(+63 files in other folders)
